--- a/index.html
+++ b/index.html
@@ -12,20 +12,29 @@
         <!-- cdn Font Awesome 5 -->
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
     </head>
+    <style>
+        .btn-star { color: rgb(168, 161, 161);padding: 0; }
+        .btn-star:hover { color: rgb(219, 219, 39); }
+        .btn-star .fas { color: rgb(219, 219, 39); }
+    </style>
     <body>
-        <div class="container mt-5">
+        <div class="container mt-5 mb-5">
             <div class="text-center">
                 <button class="btn btn-lg btn-primary" id="buscar"><i class="fas fa-search"></i> Buscar por Dados na API</button>
             </div>          
+
+            <div class="text-right">
+                <button onclick="Excluir()" id="btn-excluir" style="display: none" class="btn btn-danger btn-lg"><i class="fas fa-trash"></i> Excluir todos, exeto Favoritos</button>
+            </div>
             
-            <table class="table table-hover table-striped table-bordered border mt-5">
+            <table class="table table-hover table-striped  border mt-5">
                 <thead>
                     <tr>
                         <th style="width: 8%" scope="col">User Id</th>
                         <th style="width: 5%" scope="col">Id</th>
                         <th scope="col">Title</th>
                         <th scope="col">Body</th>
-                        <th style="width: 10%" scope="col">Favoritar</th>
+                        <th style="width: 10%" scope="col"></th>
                     </tr>
                 </thead>
                 <tbody id="result">
@@ -37,6 +46,7 @@
         <script>
             let btn = document.querySelector('#buscar');
             let result = document.querySelector('#result');
+            let excluir = document.querySelector("#btn-excluir");
 
             btn.addEventListener('click', function () {
                btn.innerHTML = "<i class='fas fa-sync-alt'></i> Buscando...";
@@ -45,19 +55,56 @@
                     .then(json => {
                         console.log(json);
                         for(let i = 0; i < json.length; i++) {
-                            result.innerHTML +=  '<tr>'
-                                             +      '<th scope="row">' + json[i].userId + '</th>'
-                                             +      '<td>' + json[i].id + '</td>'
+                            if (localStorage.getItem(i+1)) {
+                                result.innerHTML +=  '<tr id="' + json[i].id + '">'
+                                             +      '<th class="text-center" scope="row">' + json[i].userId + '</th>'
+                                             +      '<td class="text-center">' + json[i].id + '</td>'
                                              +      '<td>' + json[i].title + '</td>'
                                              +      '<td>' + json[i].body + '</td>'
-                                             +      '<td></td>'
+                                             +      '<td class="text-center">'
+                                             +          '<button onclick="Favoritar(' + json[i].id + ', this)" class="btn btn-star" style="font-size: 35px"><i class="fas fa-star"></i></button>'
+                                             +      '</td>'
                                              +   '</tr>'
+                            } else {
+                                result.innerHTML +=  '<tr id="' + json[i].id + '">'
+                                             +      '<th class="text-center" scope="row">' + json[i].userId + '</th>'
+                                             +      '<td class="text-center">' + json[i].id + '</td>'
+                                             +      '<td>' + json[i].title + '</td>'
+                                             +      '<td>' + json[i].body + '</td>'
+                                             +      '<td class="text-center">'
+                                             +          '<button onclick="Favoritar(' + json[i].id + ', this)" class="btn btn-star" style="font-size: 35px"><i class="far fa-star"></i></button>'
+                                             +      '</td>'
+                                             +   '</tr>'
+                            }
+                            
                         }
+                        setInterval(() => {
+                            btn.style.display = "none";
+                            excluir.style.display = "inline";
+                        }, 500);
                     })
-                    setInterval(() => {
-                        btn.innerHTML = "<i class='fas fa-search'></i> Buscar Dados na API";
-                    }, 1000);
             });
+
+            function Favoritar(id, button) {
+                if (button.innerHTML == '<i class="far fa-star"></i>') {
+                    button.innerHTML = '<i class="fas fa-star"></i>';
+                    localStorage.setItem(id, 'favorito');
+                } else {
+                    button.innerHTML = '<i class="far fa-star"></i>'
+                    localStorage.removeItem(id);
+                }                
+            }
+
+            function Excluir() {
+                var nenhum = true;
+
+                for(let j = 1; j <= 100; j++) {
+                    if (!localStorage.getItem(j)) {
+                        document.getElementById(j).style.display = 'none';
+                        nenhum = false;
+                    }
+                }   
+            }
         </script>
     </body>
 </html>
